Add user entities

--- a/Myvet.Web/Views/Managers/Index.cshtml
+++ b/Myvet.Web/Views/Managers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Myvet.Web.Data.Entities.Owner>
+﻿@model IEnumerable<Myvet.Web.Data.Entities.Manager>
 
 @{
     ViewData["Title"] = "Index";
