--- a/Myvet.Web/Views/Managers/Create.cshtml
+++ b/Myvet.Web/Views/Managers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Myvet.Web.Data.Entities.Owner
+﻿@model Myvet.Web.Data.Entities.Manager
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-<h4>Owner</h4>
+<h4>Manager</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
